// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test svg-editor should render correctly in mac 1`] = `
<SVGEditor>
  <div>
    <div
      className="mac"
      id="svg_editor"
    >
      <div
        style={Object {}}
      >
        <div
          className="mac"
          id="rulers"
        >
          <div
            id="ruler_corner"
          />
          <div
            id="ruler_x"
          >
            <div>
              <canvas
                height={15}
              />
            </div>
          </div>
          <div
            id="ruler_y"
          >
            <div>
              <canvas
                width={15}
              />
            </div>
          </div>
          <div
            id="ruler_unit_shower"
          >
            inch
          </div>
        </div>
        <div
          className="mac"
          id="workarea"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            id="styleoverrides"
            media="screen"
            scoped={true}
            type="text/css"
          />
          <div
            id="svgcanvas"
            style={
              Object {
                "position": "relative",
              }
            }
          />
        </div>
        <DummyRightPanelContextProvider>
          <div>
            This is dummy RightPanelContextProvider
            <DummyRightPanel>
              <div>
                This is dummy RightPanel
              </div>
            </DummyRightPanel>
          </div>
        </DummyRightPanelContextProvider>
        <DummyZoomBlock
          setZoom={[Function]}
        >
          <div>
            This is dummy ZoomBlock
          </div>
        </DummyZoomBlock>
        <div
          id="main_button"
        >
          <div
            className="tool_button"
            id="main_icon"
            title="Main Menu"
          >
            <div
              id="main_menu"
            >
              <ul>
                <li
                  id="tool_open"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    id="fileinputs"
                  >
                    <div />
                  </div>
                  Open SVG
                </li>
                <li
                  id="tool_import"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    id="fileinputs_import"
                  >
                    <div />
                  </div>
                  Import Image
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="tools_panel"
          id="tools_top"
        >
          <div
            id="editor_panel"
          >
            <div
              className="push_button"
              id="tool_source"
              title="Edit Source [U]"
            />
          </div>
          <div
            id="text_panel"
          >
            <input
              id="text"
              size={35}
              type="text"
            />
          </div>
        </div>
        <div
          id="cur_context_panel"
        />
        <div
          className="tools_panel"
          id="tools_left"
        >
          <div
            className="tool_button"
            id="tool_select"
            title="Select Tool"
          />
          <div
            className="tool_button"
            id="tool_fhpath"
            title="Pencil Tool"
          />
          <div
            className="tool_button"
            id="tool_line"
            title="Line Tool"
          />
          <div
            className="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            className="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            className="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
          <div
            className="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            className="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            className="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            className="tool_button"
            id="tool_zoom"
            title="Zoom Tool [Ctrl+Up/Down]"
          />
          <div
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
        </div>
        <div
          className="tools_panel"
          id="tools_bottom"
        >
          <div
            id="tools_bottom_2"
          >
            <div
              id="color_tools"
            >
              <div
                className="color_tool"
                id="tool_fill"
              >
                <label
                  className="icon_label"
                  htmlFor="fill_color"
                  title="Change fill color"
                />
                <div
                  className="color_block"
                >
                  <div
                    id="fill_bg"
                  />
                  <div
                    className="color_block"
                    id="fill_color"
                  />
                </div>
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_stroke"
            >
              <label
                className="icon_label"
                title="Change stroke color"
              />
              <div
                className="color_block"
              >
                <div
                  id="stroke_bg"
                />
                <div
                  className="color_block"
                  id="stroke_color"
                  title="Change stroke color"
                />
              </div>
              <label
                className="stroke_label"
              >
                <input
                  data-attr="Stroke Width"
                  defaultValue={5}
                  id="stroke_width"
                  size={2}
                  title="Change stroke width by 1, shift-click to change by 0.1"
                  type="text"
                />
              </label>
              <div
                id="toggle_stroke_tools"
                title="Show/hide more stroke tools"
              />
              <label
                className="stroke_tool"
              >
                <select
                  defaultValue="none"
                  id="stroke_style"
                  title="Change stroke dash style"
                >
                  <option
                    value="none"
                  >
                    —
                  </option>
                  <option
                    value="2,2"
                  >
                    ...
                  </option>
                  <option
                    value="5,5"
                  >
                    - -
                  </option>
                  <option
                    value="5,2,2,2"
                  >
                    - .
                  </option>
                  <option
                    value="5,2,2,2,2,2"
                  >
                    - ..
                  </option>
                </select>
              </label>
              <div
                className="stroke_tool dropdown"
                id="stroke_linejoin"
              >
                <div
                  id="cur_linejoin"
                  title="Linejoin: Miter"
                />
                <button
                  type="button"
                />
              </div>
              <div
                className="stroke_tool dropdown"
                id="stroke_linecap"
              >
                <div
                  id="cur_linecap"
                  title="Linecap: Butt"
                />
                <button
                  type="button"
                />
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_opacity"
              title="Change selected item opacity"
            >
              <label>
                <span
                  className="icon_label"
                  id="group_opacityLabel"
                />
                <input
                  defaultValue={100}
                  id="group_opacity"
                  size={3}
                  type="text"
                />
              </label>
              <div
                className="dropdown"
                id="opacity_dropdown"
              >
                <button
                  type="button"
                />
                <ul>
                  <li>
                    0%
                  </li>
                  <li>
                    25%
                  </li>
                  <li>
                    50%
                  </li>
                  <li>
                    75%
                  </li>
                  <li>
                    100%
                  </li>
                  <li
                    className="special"
                  >
                    <div
                      id="opac_slider"
                    />
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dropdown"
          id="option_lists"
        >
          <ul
            id="linejoin_opts"
          >
            <li
              className="tool_button current"
              id="linejoin_miter"
              title="Linejoin: Miter"
            />
            <li
              className="tool_button"
              id="linejoin_round"
              title="Linejoin: Round"
            />
            <li
              className="tool_button"
              id="linejoin_bevel"
              title="Linejoin: Bevel"
            />
          </ul>
          <ul
            id="linecap_opts"
          >
            <li
              className="tool_button current"
              id="linecap_butt"
              title="Linecap: Butt"
            />
            <li
              className="tool_button"
              id="linecap_square"
              title="Linecap: Square"
            />
            <li
              className="tool_button"
              id="linecap_round"
              title="Linecap: Round"
            />
          </ul>
        </div>
        <div
          id="color_picker"
        />
      </div>
    </div>
    <div
      id="svg_source_editor"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_source_container"
      >
        <div
          className="toolbar_button"
          id="tool_source_back"
        >
          <button
            id="tool_source_save"
            type="button"
          >
            Apply Changes
          </button>
          <button
            id="tool_source_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          id="save_output_btns"
        >
          <p
            id="copy_save_note"
          >
            Copy the contents of this box into a text editor, then save the file with a .svg extension.
          </p>
          <button
            id="copy_save_done"
            type="button"
          >
            Done
          </button>
        </div>
        <form>
          <textarea
            defaultValue=""
            id="svg_source_textarea"
            spellCheck="false"
          />
        </form>
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          className="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size={6}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size={6}
                type="text"
              />
            </label>
            <label>
              <select
                defaultValue="predefined"
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                defaultChecked={true}
                defaultValue="embed"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                defaultValue="ref"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          className="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_lang"
            >
              Language:
            </span>
            <select
              defaultValue="en"
              id="lang_select"
            >
              <option
                id="lang_de"
                value="de"
              >
                Deutsche
              </option>
              <option
                id="lang_en"
                value="en"
              >
                English
              </option>
              <option
                id="lang_zh-TW"
                value="zh-TW"
              >
                繁體中文
              </option>
              <option
                id="lang_ja"
                value="ja"
              >
                日本語
              </option>
              <option
                id="lang_zh-CN"
                value="es"
              >
                Español
              </option>
              <option
                id="lang_zh-CN"
                value="zh-CN"
              >
                簡中
              </option>
            </select>
          </label>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              defaultValue="m"
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                defaultValue="snapping_on"
                id="grid_snapping_on"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                defaultValue={10}
                id="grid_snapping_step"
                size={3}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                defaultValue="#000"
                id="grid_color"
                size={3}
                type="text"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                defaultChecked={true}
                defaultValue="show_rulers"
                id="show_rulers"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        className="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
    <ul
      className="contextMenu"
      id="cmenu_canvas"
    >
      <li>
        <a
          href="#cut"
          onClick={[Function]}
        >
          Cut
        </a>
      </li>
      <li>
        <a
          href="#copy"
          onClick={[Function]}
        >
          Copy
        </a>
      </li>
      <li>
        <a
          href="#paste"
          onClick={[Function]}
        >
          Paste
        </a>
      </li>
      <li>
        <a
          href="#paste_in_place"
          onClick={[Function]}
        >
          Paste in Place
        </a>
      </li>
      <li>
        <a
          href="#duplicate"
          onClick={[Function]}
        />
      </li>
      <li
        className="separator"
      >
        <a
          href="#delete"
          onClick={[Function]}
        >
          Delete
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#group"
          onClick={[Function]}
        >
          Group
        </a>
      </li>
      <li>
        <a
          href="#ungroup"
          onClick={[Function]}
        >
          Ungroup
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#move_front"
          onClick={[Function]}
        >
          Bring to Front
        </a>
      </li>
      <li>
        <a
          href="#move_up"
          onClick={[Function]}
        >
          Bring Forward
        </a>
      </li>
      <li>
        <a
          href="#move_down"
          onClick={[Function]}
        >
          Send Backward
        </a>
      </li>
      <li>
        <a
          href="#move_back"
          onClick={[Function]}
        >
          Send to Back
        </a>
      </li>
    </ul>
  </div>
</SVGEditor>
`;

exports[`test svg-editor should render correctly in win 1`] = `
<SVGEditor>
  <div>
    <div
      className=""
      id="svg_editor"
    >
      <div
        style={Object {}}
      >
        <div
          className=""
          id="rulers"
        >
          <div
            id="ruler_corner"
          />
          <div
            id="ruler_x"
          >
            <div>
              <canvas
                height={15}
              />
            </div>
          </div>
          <div
            id="ruler_y"
          >
            <div>
              <canvas
                width={15}
              />
            </div>
          </div>
          <div
            id="ruler_unit_shower"
          >
            mm
          </div>
        </div>
        <div
          className=""
          id="workarea"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            id="styleoverrides"
            media="screen"
            scoped={true}
            type="text/css"
          />
          <div
            id="svgcanvas"
            style={
              Object {
                "position": "relative",
              }
            }
          />
        </div>
        <DummyRightPanelContextProvider>
          <div>
            This is dummy RightPanelContextProvider
            <DummyRightPanel>
              <div>
                This is dummy RightPanel
              </div>
            </DummyRightPanel>
          </div>
        </DummyRightPanelContextProvider>
        <DummyZoomBlock
          setZoom={[Function]}
        >
          <div>
            This is dummy ZoomBlock
          </div>
        </DummyZoomBlock>
        <div
          id="main_button"
        >
          <div
            className="tool_button"
            id="main_icon"
            title="Main Menu"
          >
            <div
              id="main_menu"
            >
              <ul>
                <li
                  id="tool_open"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    id="fileinputs"
                  >
                    <div />
                  </div>
                  Open SVG
                </li>
                <li
                  id="tool_import"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    id="fileinputs_import"
                  >
                    <div />
                  </div>
                  Import Image
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="tools_panel"
          id="tools_top"
        >
          <div
            id="editor_panel"
          >
            <div
              className="push_button"
              id="tool_source"
              title="Edit Source [U]"
            />
          </div>
          <div
            id="text_panel"
          >
            <input
              id="text"
              size={35}
              type="text"
            />
          </div>
        </div>
        <div
          id="cur_context_panel"
        />
        <div
          className="tools_panel"
          id="tools_left"
        >
          <div
            className="tool_button"
            id="tool_select"
            title="Select Tool"
          />
          <div
            className="tool_button"
            id="tool_fhpath"
            title="Pencil Tool"
          />
          <div
            className="tool_button"
            id="tool_line"
            title="Line Tool"
          />
          <div
            className="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            className="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            className="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
          <div
            className="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            className="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            className="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            className="tool_button"
            id="tool_zoom"
            title="Zoom Tool [Ctrl+Up/Down]"
          />
          <div
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
        </div>
        <div
          className="tools_panel"
          id="tools_bottom"
        >
          <div
            id="tools_bottom_2"
          >
            <div
              id="color_tools"
            >
              <div
                className="color_tool"
                id="tool_fill"
              >
                <label
                  className="icon_label"
                  htmlFor="fill_color"
                  title="Change fill color"
                />
                <div
                  className="color_block"
                >
                  <div
                    id="fill_bg"
                  />
                  <div
                    className="color_block"
                    id="fill_color"
                  />
                </div>
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_stroke"
            >
              <label
                className="icon_label"
                title="Change stroke color"
              />
              <div
                className="color_block"
              >
                <div
                  id="stroke_bg"
                />
                <div
                  className="color_block"
                  id="stroke_color"
                  title="Change stroke color"
                />
              </div>
              <label
                className="stroke_label"
              >
                <input
                  data-attr="Stroke Width"
                  defaultValue={5}
                  id="stroke_width"
                  size={2}
                  title="Change stroke width by 1, shift-click to change by 0.1"
                  type="text"
                />
              </label>
              <div
                id="toggle_stroke_tools"
                title="Show/hide more stroke tools"
              />
              <label
                className="stroke_tool"
              >
                <select
                  defaultValue="none"
                  id="stroke_style"
                  title="Change stroke dash style"
                >
                  <option
                    value="none"
                  >
                    —
                  </option>
                  <option
                    value="2,2"
                  >
                    ...
                  </option>
                  <option
                    value="5,5"
                  >
                    - -
                  </option>
                  <option
                    value="5,2,2,2"
                  >
                    - .
                  </option>
                  <option
                    value="5,2,2,2,2,2"
                  >
                    - ..
                  </option>
                </select>
              </label>
              <div
                className="stroke_tool dropdown"
                id="stroke_linejoin"
              >
                <div
                  id="cur_linejoin"
                  title="Linejoin: Miter"
                />
                <button
                  type="button"
                />
              </div>
              <div
                className="stroke_tool dropdown"
                id="stroke_linecap"
              >
                <div
                  id="cur_linecap"
                  title="Linecap: Butt"
                />
                <button
                  type="button"
                />
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_opacity"
              title="Change selected item opacity"
            >
              <label>
                <span
                  className="icon_label"
                  id="group_opacityLabel"
                />
                <input
                  defaultValue={100}
                  id="group_opacity"
                  size={3}
                  type="text"
                />
              </label>
              <div
                className="dropdown"
                id="opacity_dropdown"
              >
                <button
                  type="button"
                />
                <ul>
                  <li>
                    0%
                  </li>
                  <li>
                    25%
                  </li>
                  <li>
                    50%
                  </li>
                  <li>
                    75%
                  </li>
                  <li>
                    100%
                  </li>
                  <li
                    className="special"
                  >
                    <div
                      id="opac_slider"
                    />
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dropdown"
          id="option_lists"
        >
          <ul
            id="linejoin_opts"
          >
            <li
              className="tool_button current"
              id="linejoin_miter"
              title="Linejoin: Miter"
            />
            <li
              className="tool_button"
              id="linejoin_round"
              title="Linejoin: Round"
            />
            <li
              className="tool_button"
              id="linejoin_bevel"
              title="Linejoin: Bevel"
            />
          </ul>
          <ul
            id="linecap_opts"
          >
            <li
              className="tool_button current"
              id="linecap_butt"
              title="Linecap: Butt"
            />
            <li
              className="tool_button"
              id="linecap_square"
              title="Linecap: Square"
            />
            <li
              className="tool_button"
              id="linecap_round"
              title="Linecap: Round"
            />
          </ul>
        </div>
        <div
          id="color_picker"
        />
      </div>
    </div>
    <div
      id="svg_source_editor"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_source_container"
      >
        <div
          className="toolbar_button"
          id="tool_source_back"
        >
          <button
            id="tool_source_save"
            type="button"
          >
            Apply Changes
          </button>
          <button
            id="tool_source_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          id="save_output_btns"
        >
          <p
            id="copy_save_note"
          >
            Copy the contents of this box into a text editor, then save the file with a .svg extension.
          </p>
          <button
            id="copy_save_done"
            type="button"
          >
            Done
          </button>
        </div>
        <form>
          <textarea
            defaultValue=""
            id="svg_source_textarea"
            spellCheck="false"
          />
        </form>
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          className="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size={6}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size={6}
                type="text"
              />
            </label>
            <label>
              <select
                defaultValue="predefined"
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                defaultChecked={true}
                defaultValue="embed"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                defaultValue="ref"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          className="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_lang"
            >
              Language:
            </span>
            <select
              defaultValue="en"
              id="lang_select"
            >
              <option
                id="lang_de"
                value="de"
              >
                Deutsche
              </option>
              <option
                id="lang_en"
                value="en"
              >
                English
              </option>
              <option
                id="lang_zh-TW"
                value="zh-TW"
              >
                繁體中文
              </option>
              <option
                id="lang_ja"
                value="ja"
              >
                日本語
              </option>
              <option
                id="lang_zh-CN"
                value="es"
              >
                Español
              </option>
              <option
                id="lang_zh-CN"
                value="zh-CN"
              >
                簡中
              </option>
            </select>
          </label>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              defaultValue="m"
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                defaultValue="snapping_on"
                id="grid_snapping_on"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                defaultValue={10}
                id="grid_snapping_step"
                size={3}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                defaultValue="#000"
                id="grid_color"
                size={3}
                type="text"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                defaultChecked={true}
                defaultValue="show_rulers"
                id="show_rulers"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        className="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
    <ul
      className="contextMenu"
      id="cmenu_canvas"
    >
      <li>
        <a
          href="#cut"
          onClick={[Function]}
        >
          Cut
        </a>
      </li>
      <li>
        <a
          href="#copy"
          onClick={[Function]}
        >
          Copy
        </a>
      </li>
      <li>
        <a
          href="#paste"
          onClick={[Function]}
        >
          Paste
        </a>
      </li>
      <li>
        <a
          href="#paste_in_place"
          onClick={[Function]}
        >
          Paste in Place
        </a>
      </li>
      <li>
        <a
          href="#duplicate"
          onClick={[Function]}
        />
      </li>
      <li
        className="separator"
      >
        <a
          href="#delete"
          onClick={[Function]}
        >
          Delete
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#group"
          onClick={[Function]}
        >
          Group
        </a>
      </li>
      <li>
        <a
          href="#ungroup"
          onClick={[Function]}
        >
          Ungroup
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#move_front"
          onClick={[Function]}
        >
          Bring to Front
        </a>
      </li>
      <li>
        <a
          href="#move_up"
          onClick={[Function]}
        >
          Bring Forward
        </a>
      </li>
      <li>
        <a
          href="#move_down"
          onClick={[Function]}
        >
          Send Backward
        </a>
      </li>
      <li>
        <a
          href="#move_back"
          onClick={[Function]}
        >
          Send to Back
        </a>
      </li>
    </ul>
  </div>
</SVGEditor>
`;
